added support for docker-compose and added nginx in front of django_server

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.6
 WORKDIR /usr/src/app
 
 # copy project files into the WORKDIR
-COPY . .
+COPY ./mysite .
 
 COPY requirements.txt .
 
